<resources>
    <string name="app_name">SSEbook</string>
    <string name="search">Search</string>
    <string name="books_thumbnail">books_thumbnail</string>
    <string name="title">Title</string>
    <string name="price_24_95">Price: 24.95 $</string>
    <string name="year_2017">Year: 2017</string>
    <string-array name="sort_book">
        <item>Sort by title</item>
        <item>Sort by publish year</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="book_store">Book Store</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
</resources>
